--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,32 @@
-pytelegrambotapi
-cairocffi
-pangocffi
-pangocairocffi
-requests
-cairosvg
-pyTelegramBotAPI
+appdirs==1.4.4
+beautifulsoup4==4.12.3
+cairocffi==1.6.1
+CairoSVG==2.7.1
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+cssselect2==0.7.0
+defusedxml==0.7.1
+frozendict==2.4.0
+html5lib==1.1
+idna==3.6
+lxml==5.1.0
+multitasking==0.0.11
+numpy==1.26.3
+pandas==2.1.4
+pangocairocffi==0.7.0
+pangocffi==0.12.0
+peewee==3.17.0
+pillow==10.2.0
+pycparser==2.21
+pyTelegramBotAPI==4.14.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+requests==2.31.0
+six==1.16.0
+soupsieve==2.5
+tinycss2==1.2.1
+tzdata==2023.4
+urllib3==2.1.0
+webencodings==0.5.1
+yfinance==0.2.35
